--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "types": ["node"]  // Agrega esto
+    "types": ["node", "jest"] // Aquí agregamos 'jest'
   }
 }
