--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,10 +39,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Autenticación en Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Pull de la imagen de Docker Hub
+      - name: Pull Docker image from Docker Hub
+        run: |
+          docker pull jhonnystr/types-action:latest
+
+      # Configuración y ejecución del contenedor de PostgreSQL
       - name: Set up PostgreSQL container
         run: |
           docker run --name postgres -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=solocali123# -e POSTGRES_DB=proyect_nest -p 5432:5432 -d postgres:latest
 
+      # Esperar a que PostgreSQL esté listo
       - name: Wait for PostgreSQL to be ready
         run: |
           until pg_isready -h localhost -p 5432 -U postgres; do
@@ -50,10 +64,7 @@ jobs:
             sleep 2
           done
 
-      - name: Build Docker image
+      # Ejecutar el contenedor de la aplicación NestJS desde la imagen descargada
+      - name: Run Docker container for NestJS app
         run: |
-          docker build -t nestjs-app .
-
-      - name: Run Docker container
-        run: |
-          docker run -d -p 3000:3000 --link postgres:postgres --env DB_HOST=postgres --env DB_PORT=5432 --env DB_USERNAME=postgres --env DB_PASSWORD=solocali123# --env DB_DATABASE=proyect_nest nestjs-app
+          docker run -d -p 3000:3000 --link postgres:postgres --env DB_HOST=postgres --env DB_PORT=5432 --env DB_USERNAME=postgres --env DB_PASSWORD=solocali123# --env DB_DATABASE=proyect_nest jhonnystr/types-action:latest
